--- a/Circular-Navigation-Menu/style.css
+++ b/Circular-Navigation-Menu/style.css
@@ -83,3 +83,79 @@ body
     transform: rotate(calc(360deg/8*var(--i)))
     translateX(12px);
 }
+
+.indicator
+{
+    position: absolute;
+    left: calc(50% + 2.5px);
+    transform-origin: right;
+    width: 100px;
+    height: 1px;
+    background: transparent;
+    pointer-events: none;
+    transition: 0.5s;
+}
+
+.indicator::before
+{
+    content: '';
+    position: absolute;
+    top: -27.5px;
+    left: 72px;
+    width: 55px;
+    height: 55px;
+    background-color: #00ff1e;
+    box-shadow: 0 0 0 6px #36013f;
+    border-radius: 50%;
+    transition: 0.5s;
+    opacity: 0;
+}
+
+.menu.active .indicator::before
+{
+    opacity: 1;
+    top: -27.5px;
+    left: -27.5px;
+    background: #00ff1e;
+    box-shadow: #36013F;
+}
+
+.menu li:nth-child(2).active ~ .indicator
+{
+    transform: translateX(-103px) rotate(0deg);
+}
+
+.menu li:nth-child(3).active ~ .indicator
+{
+    transform: translateX(-103px) rotate(45deg);
+}
+
+.menu li:nth-child(4).active ~ .indicator
+{
+    transform: translateX(-103px) rotate(90deg);
+}
+
+.menu li:nth-child(5).active ~ .indicator
+{
+    transform: translateX(-103px) rotate(135deg);
+}
+
+.menu li:nth-child(6).active ~ .indicator
+{
+    transform: translateX(-103px) rotate(180deg);
+}
+
+.menu li:nth-child(7).active ~ .indicator
+{
+    transform: translateX(-103px) rotate(225deg);
+}
+
+.menu li:nth-child(8).active ~ .indicator
+{
+    transform: translateX(-103px) rotate(270deg);
+}
+
+.menu li:nth-child(9).active ~ .indicator
+{
+    transform: translateX(-103px) rotate(315deg);
+}
